--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "ember-qunit-notifications": "0.1.0",
     "firebase": "^3.0.0",
     "bootstrap-sass": "^3.3.7",
-    "font-awesome": "~4.5.0"
+    "font-awesome": "~4.5.0",
+    "select2": "3.5.2"
   }
 }
