--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ember-font-awesome": "2.1.1",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
+    "ember-select-2": "1.3.0",
     "ember-welcome-page": "^1.0.1",
     "emberfire": "2.0.1",
     "loader.js": "^4.0.1",
